--- a/assets/styles/_about.scss
+++ b/assets/styles/_about.scss
@@ -1,3 +1,10 @@
+.identity_page {
+    background-size:contain;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+}
+
 .about_boxone {
     margin-top: 5rem!important;
     margin-left: 10rem!important;
