--- a/assets/styles/_support.scss
+++ b/assets/styles/_support.scss
@@ -1,3 +1,10 @@
+.support_page {
+    background-size:contain;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+}
+
 .support_boxone {
     margin-top: 5rem!important;
     margin-left: 1rem!important;
