--- a/assets/app.scss
+++ b/assets/app.scss
@@ -21,6 +21,13 @@
     font-size: 1.2rem;
 }
 
+body {
+    background-size:contain;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+}
+
 @media (max-width: 1200px) {
     * {
         font-size: 1.6rem;
