--- a/templates/main/about.html.twig
+++ b/templates/main/about.html.twig
@@ -2,56 +2,52 @@
 
 
 {% block body %}
-<h1 class="text-center">Ambulance La Clunysoise</h1>
 
-{% set counter = 0 %}
+<section class="identity_page" style="background-image: url('{{ asset("croix.png") }}');">
+    <h1 class="text-center">Ambulance La Clunysoise</h1>
 
-{% for posts in post %}
+    {% set counter = 0 %}
+    {% for posts in post %}
 
-    {% if counter is divisible by(2) %}
+        {% if counter is divisible by(2) %}
 
-        <section class="about_boxone">
+            <section class="about_boxone">
+                <div class="row">
+                    <div class="col-5 d-flex justify-content-center align-middle">
+                        {% if posts.mediaUrl is not null %}
+                            <img src="upload/images/{{ asset(posts.mediaUrl) }}">
+                        {% endif %}
+                    </div>
+
+                
+                    <div class="col-7">
+                        <h1 class="text-center">{{ posts.title }}</h1>
+                        <p>{{ posts.content|striptags|replace({'&nbsp;': ''}) }}</p>
+                    </div>
+                </div>
+            </section>
+
+            {% else %}
+
+            <section class="about_boxone">
+                <div class="row">
+                    <div class="col-7">
+                        <h1 class="text-center">{{ posts.title }}</h1>
+                        <p>{{ posts.content|striptags|replace({'&nbsp;': ''}) }}</p>
+                    </div>
+
+                    <div class="col-5 d-flex justify-content-center align-middle">
+                        {% if posts.mediaUrl is not null %}
+                            <img src="upload/images/{{ asset(posts.mediaUrl) }}">
+                        {% endif %}
+                    </div>
+                </div>
+            </section>
             
-            <div class="row">
-
-                <div class="col-5 d-flex justify-content-center align-middle">
-                    {% if posts.mediaUrl is not null %}
-                        <img src="upload/images/{{ asset(posts.mediaUrl) }}">
-                    {% endif %}
-                </div>
-
-            
-                <div class="col-7">
-                    <h1 class="text-center">{{ posts.title }}</h1>
-                    <p>{{ posts.content|striptags|replace({'&nbsp;': ''}) }}</p>
-                </div>
-
-            </div>
-        </section>
-
-        {% else %}
-
-        <section class="about_boxone">
-            
-            <div class="row">
-
-                <div class="col-7">
-                    <h1 class="text-center">{{ posts.title }}</h1>
-                    <p>{{ posts.content|striptags|replace({'&nbsp;': ''}) }}</p>
-                </div>
-
-                <div class="col-5 d-flex justify-content-center align-middle">
-                    {% if posts.mediaUrl is not null %}
-                        <img src="upload/images/{{ asset(posts.mediaUrl) }}">
-                    {% endif %}
-                </div>
-
-            </div>
-        </section>
+        {% endif %}
         
-    {% endif %}
-    
-    {% set counter = counter + 1 %}
-{% endfor %}
+        {% set counter = counter + 1 %}
+    {% endfor %}
+</section>
 
 {% endblock %}
