--- a/templates/main/joinUs.html.twig
+++ b/templates/main/joinUs.html.twig
@@ -3,52 +3,37 @@
 
 {% block body %}
 
-    {% set counter = 0 %}
-
-    {% for posts in post %}
-
-        {% if counter is divisible by(2) %}
-
-            <section class="join_boxone border-top">
-                <div class="row">
-
-                    <div class="col-5 d-flex">
-                        {% if posts.mediaUrl is not null %}
-                            <img class="align-middle" src="upload/images/{{ asset(posts.mediaUrl) }}">
-                        {% endif %}
-                    </div>
-
-                    <div class="col-7">
-                        <h1 class="text-center">{{ posts.title }}</h1>
-                        <p>{{ posts.content|striptags|replace({'&nbsp;': ''}) }}</p>
-                    </div>
-
+{% set counter = 0 %}
+{% for posts in post %}
+    {% if counter is divisible by(2) %}
+    <section id="gridGallery" style="background-image: url('{{ asset("croixGrey.png") }}');">
+        <div class="container-fluid pt-5 pb-5">
+            <div class="row content">
+                <div class="col-lg-12 subContent">
+                    <h1 class="fw-bolder pb-5 text-center">{{ posts.title }}</h1> 
+                    {% if posts.mediaUrl is not null %}
+                    <img class="img-fluid rounded-5 imgL" src="upload/images/{{ asset(posts.mediaUrl) }}">
+                    {% endif %}
+                    <p>{{ posts.content|striptags|replace({'&nbsp;': ''}) }}</p>
                 </div>
-            </section>
-
-            {% else %}
-
-            <section class="join_boxone border-top">
-                <div class="row">
-
-                    <div class="col-7">
-                        <h1 class="text-center">{{ posts.title }}</h1>
-                        <p>{{ posts.content|striptags|replace({'&nbsp;': ''}) }}</p>
-                    </div>
-
-                    <div class="col-5 d-flex">
-                        {% if posts.mediaUrl is not null %}
-                            <img class="align-middle" src="upload/images/{{ asset(posts.mediaUrl) }}">
-                        {% endif %}
-                    </div>
-
+            </div>
+        </div>
+        {% else %}
+        <div class="container-fluid pt-5 pagesSection">
+            <div class="row content">
+                <div class="col-lg-12 subContent">
+                    <h1 class="fw-bolder pb-5 text-center">{{ posts.title }}</h1> 
+                    {% if posts.mediaUrl is not null %}
+                    <img class="img-fluid rounded-5 imgR" src="upload/images/{{ asset(posts.mediaUrl) }}">
+                    {% endif %}
+                    <p>{{ posts.content|striptags|replace({'&nbsp;': ''}) }}</p>
                 </div>
-            </section>
-            
-        {% endif %}
-        
-        {% set counter = counter + 1 %}
-    {% endfor %}
+            </div>
+        </div>
+    </section>
+    {% endif %}
+    {% set counter = counter + 1 %}
+{% endfor %}
 
     <div class="container">
         <section class="row border-top">
