--- a/assets/app.scss
+++ b/assets/app.scss
@@ -3,12 +3,8 @@
 @import "assets/styles/_home.scss";
 @import "assets/styles/_header.scss";
 @import "assets/styles/_footer.scss";
-@import "assets/styles/_show.scss";
-@import "assets/styles/_about.scss";
-@import "assets/styles/_support.scss";
-@import "assets/styles/_contact.scss";
-@import "assets/styles/_join.scss";
-@import "assets/styles/_appointment.scss";
+@import "assets/styles/_!home.scss";
+@import "assets/styles/_forms.scss";
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
