--- a/assets/styles/_!home.scss
+++ b/assets/styles/_!home.scss
@@ -1,4 +1,4 @@
-.showSection {
+.pagesSection {
     margin-top: 200px;
     background-size: cover;
     background-repeat: no-repeat;
@@ -40,7 +40,7 @@
 }
 
 @media (max-width: 1199.98px) { 
-    .showScetion {
+    .pagesSection {
         background-size: auto;
     }
 
