--- a/templates/post/show.html.twig
+++ b/templates/post/show.html.twig
@@ -4,7 +4,7 @@
 {% block body %}
 
 
-<section class="showSection" style="background-image: url('{{ asset('background.png') }}');">
+<section class="pagesSection" style="background-image: url('{{ asset('background.png') }}');">
     <div class="container-fluid pt-5 pb-5">
         <div class="row content">
             <div class="col-lg-12 subContent">
