--- a/assets/styles/_!home.scss
+++ b/assets/styles/_!home.scss
@@ -1,6 +1,6 @@
 .pagesSection {
     margin-top: 200px;
-    background-size: cover;
+    background-size:contain;
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
