--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -94,7 +94,7 @@
         </div>           
 </section>
 
-<section id="gridGallery" style="background-image: url('{{ asset("croixGrey.png") }}');">
+<section class="gridGallery" style="background-image: url('{{ asset("croixGrey.png") }}');">
     <h2 class="text-center pt-5">Actus</h2>
     <div class="container">
         <div class="row justify-content-center">
