--- a/templates/main/joinUs.html.twig
+++ b/templates/main/joinUs.html.twig
@@ -6,7 +6,7 @@
 {% set counter = 0 %}
 {% for posts in post %}
     {% if counter is divisible by(2) %}
-    <section id="gridGallery" style="background-image: url('{{ asset("croixGrey.png") }}');">
+    <section class="pagesSection" style="background-image: url('{{ asset("croixGrey.png") }}');">
         <div class="container-fluid pt-5 pb-5">
             <div class="row content">
                 <div class="col-lg-12 subContent">
@@ -19,7 +19,7 @@
             </div>
         </div>
         {% else %}
-        <div class="container-fluid pt-5 pagesSection">
+        <div class="container-fluid pt-5">
             <div class="row content">
                 <div class="col-lg-12 subContent">
                     <h1 class="fw-bolder pb-5 text-center">{{ posts.title }}</h1> 
