--- a/templates/main/supportPricing.html.twig
+++ b/templates/main/supportPricing.html.twig
@@ -16,7 +16,7 @@
             </div>
         </div>
         {% else %}
-        <div class="container-fluid pt-5">
+        <div class="container-fluid pt-5 pb-5">
             <div class="row content">
                 <div class="col-lg-12 subContent">
                     <h1 class="fw-bolder pb-5 text-center">{{ posts.title }}</h1> 
