--- a/templates/main/aboutUs.html.twig
+++ b/templates/main/aboutUs.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 {% block body %}
+<section class="pagesSection" style="background-image: url('{{ asset("croixGrey.png") }}');">
 {% set counter = 0 %}
 {% for posts in post %}
     {% if counter is divisible by(2) %}
-    <section class="pagesSection" style="background-image: url('{{ asset("croixGrey.png") }}');">
         <div class="container-fluid pt-5 pb-5">
             <div class="row content">
                 <div class="col-lg-12 subContent">
@@ -16,7 +16,7 @@
             </div>
         </div>
         {% else %}
-        <div class="container-fluid pt-5">
+        <div class="container-fluid pt-5 pb-5">
             <div class="row content">
                 <div class="col-lg-12 subContent">
                     <h1 class="fw-bolder pb-5 text-center">{{ posts.title }}</h1> 
@@ -27,11 +27,9 @@
                 </div>
             </div>
         </div>
-    </section>
     {% endif %}
+
     {% set counter = counter + 1 %}
 {% endfor %}
-
+</section>
 {% endblock %}
-
-
