--- a/templates/main/joinUs.html.twig
+++ b/templates/main/joinUs.html.twig
@@ -39,6 +39,7 @@
                 <h2></h2>
                 <a href="tel:+33385590487" class="nav-link p-0 text-body-secondary mt-5 d-inline-block">Tèl : 03 85 59 04 87</a><br>
                 <a href="tel:+33677658774" class="nav-link p-0 text-body-secondary mt-5 d-inline-block">Tèl : 06 77 65 87 74</a><br>
+                <a href="mailto:mguillard@laclunysoise.fr" class="nav-link p-0 text-body-secondary mt-5 d-inline-block"> email : mguillard@laclunysoise.fr</a>
                 <a href="geo:0,0?q=7+Avn.Pierre+le+Vénérable,71250+Cluny" class="nav-link p-0 text-body-secondary mt-5 d-inline-block">7 Av. Pierre le Vénérable, 71250 Cluny</a>
             </div>
 
@@ -57,7 +58,7 @@
                     </div>
                     {{ form_row(formulaire.content) }}
                     <div class="form-group pt-3">
-                        <label>Téléchargez votre C.V ci-dessous</label>
+                        <label>Téléchargez votre C.V ci-dessous au format PDF</label>
                         {{ form_row(formulaire.Fichier) }}
                     </div>
                     {{ form_row(formulaire.envoyer) }}
