--- a/assets/app.scss
+++ b/assets/app.scss
@@ -22,3 +22,51 @@
         font-size: 1.6rem;
     }
 }
+
+// ---------- animation gauche ----------
+.fade-in-left {
+    opacity: 0;
+    transform: translateX(-2000px);
+    transition: opacity 1s ease-in-out, transform 1s ease-in-out;
+}
+
+.fade-in-left.active {
+    opacity: 1;
+    transform: translateX(0);
+}
+
+// ---------- animation droite ----------
+.fade-in-right {
+    opacity: 0;
+    transform: translateX(2000px);
+    transition: opacity 1s ease-in-out, transform 1s ease-in-out;
+}
+
+.fade-in-right.active {
+    opacity: 1;
+    transform: translateX(0);
+}
+
+// ---------- animation haut ----------
+.fade-in-up {
+    opacity: 0;
+    transform: translateY(-2000px);
+    transition: opacity 1s ease-in-out, transform 1s ease-in-out;
+}
+
+.fade-in-up.active {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+// ---------- animation bas ----------
+.fade-in-down {
+    opacity: 0;
+    transform: translateY(2000px);
+    transition: opacity 1s ease-in-out, transform 1s ease-in-out;
+}
+
+.fade-in-down.active {
+    opacity: 1;
+    transform: translateY(0);
+}
