--- a/assets/styles/_home.scss
+++ b/assets/styles/_home.scss
@@ -244,62 +244,15 @@
 
 .tile p
 {
-  line-height: 25px;
-  transform: translateX(-200px);
-  transition-delay: 0.2s;
+    line-height: 25px;
+    transform: translateX(-200px);
+    transition-delay: 0.2s;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 .tile:hover .animate-text
 {
-  transform:translateX(0);
-  opacity:1;
-}
-
-
-// ---------- animation gauche ----------
-.fade-in-left {
-    opacity: 0;
-    transform: translateX(-2000px);
-    transition: opacity 1s ease-in-out, transform 1s ease-in-out;
-}
-
-.fade-in-left.active {
-    opacity: 1;
-    transform: translateX(0);
-}
-
-// ---------- animation droite ----------
-.fade-in-right {
-    opacity: 0;
-    transform: translateX(2000px);
-    transition: opacity 1s ease-in-out, transform 1s ease-in-out;
-}
-
-.fade-in-right.active {
-    opacity: 1;
-    transform: translateX(0);
-}
-
-// ---------- animation haut ----------
-.fade-in-up {
-    opacity: 0;
-    transform: translateY(-2000px);
-    transition: opacity 1s ease-in-out, transform 1s ease-in-out;
-}
-
-.fade-in-up.active {
-    opacity: 1;
-    transform: translateY(0);
-}
-
-// ---------- animation bas ----------
-.fade-in-down {
-    opacity: 0;
-    transform: translateY(2000px);
-    transition: opacity 1s ease-in-out, transform 1s ease-in-out;
-}
-
-.fade-in-down.active {
-    opacity: 1;
-    transform: translateY(0);
+    transform:translateX(0);
+    opacity:1;
 }
