--- a/templates/main/aboutUs.html.twig
+++ b/templates/main/aboutUs.html.twig
@@ -1,35 +1,32 @@
 {% extends 'base.html.twig' %}
 {% block body %}
 <section class="pagesSection" style="background-image: url('{{ asset("croixGrey.png") }}');">
-{% set counter = 0 %}
+{% set animations = ['fade-in-left', 'fade-in-right', 'fade-in-up', 'fade-in-down'] %}
 {% for posts in post %}
-    {% if counter is divisible by(2) %}
-        <div class="container-fluid pt-5 pb-5">
-            <div class="row content">
-                <div class="col-lg-12 subContent">
-                    <h1 class="fw-bolder pb-5 text-center">{{ posts.title }}</h1> 
-                    {% if posts.mediaUrl is not null %}
-                    <img class="img-fluid rounded-5 imgL" src="upload/images/{{ asset(posts.mediaUrl) }}">
-                    {% endif %}
-                    <p>{{ posts.content|striptags|replace({'&nbsp;': ''}) }}</p>
-                </div>
+    {% set animation = animations[loop.index0 % animations|length] %}
+    <div class="container-fluid pt-5 pb-5">
+        <div class="row content">
+            <div class="col-lg-12 subContent">
+                <h1 class="fw-bolder pb-5 text-center {{ animation }}" id="about_title">{{ posts.title }}</h1> 
+                {% if posts.mediaUrl is not null %}
+                <img class="img-fluid rounded-5 imgL {{ animation }}" id="about_img" src="upload/images/{{ asset(posts.mediaUrl) }}">
+                {% endif %}
+                <p class="{{ animation }}" id="about_p">{{ posts.content|striptags|replace({'&nbsp;': ''}) }}</p>
             </div>
         </div>
-        {% else %}
-        <div class="container-fluid pt-5 pb-5">
-            <div class="row content">
-                <div class="col-lg-12 subContent">
-                    <h1 class="fw-bolder pb-5 text-center">{{ posts.title }}</h1> 
-                    {% if posts.mediaUrl is not null %}
-                    <img class="img-fluid rounded-5 imgR" src="upload/images/{{ asset(posts.mediaUrl) }}">
-                    {% endif %}
-                    <p>{{ posts.content|striptags|replace({'&nbsp;': ''}) }}</p>
-                </div>
-            </div>
-        </div>
-    {% endif %}
-
-    {% set counter = counter + 1 %}
+    </div>
 {% endfor %}
 </section>
+
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        const elements = document.querySelectorAll('.fade-in-left, .fade-in-right, .fade-in-up, .fade-in-down');
+        
+        setTimeout(function() {
+            elements.forEach((element) => {
+                element.classList.add('active');
+            });
+        }, 100);
+    });
+</script>
 {% endblock %}
