--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -114,6 +114,7 @@
                               </svg>
                     {% endif %}
                         <div>
+                            <h1 class="fw-bolder text-white text-decoration-none text-center">{{ posts.title }}</h1> 
                             <p class="text-white text-center animate-text">{{ posts.description | striptags | slice(0, 310)}}</p>
                         </div>
                     </a>
@@ -130,6 +131,7 @@
                               </svg>
                     {% endif %}
                         <div>
+                            <h1 class="fw-bolder text-white text-decoration-none text-center">{{ posts.title }}</h1> 
                             <p class="text-white text-center animate-text">{{ posts.description | striptags | slice(0, 310)}}</p>
                         </div>
                     </a>
@@ -148,5 +150,25 @@
     
     <iframe id="mobileIframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2749.5379384110347!2d4.652024377356847!3d46.438037267937126!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f30aeb8182f371%3A0xbf3199329fef4a95!2sLA%20CLUNYSOISE%20AMBULANCES%20ET%20TAXIS!5e0!3m2!1sfr!2sfr!4v1690210543131!5m2!1sfr!2sfr" width="600" height="1000" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
+
+
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+
+        const titleDesc = document.getElementById("titleDesc");
+        const carouselExampleAutoplaying = document.getElementById("carouselExampleAutoplaying");
+        const carouselExampleControls = document.getElementById("carouselExampleControls");
+        const buttonsContainer = document.getElementById("buttonsContainer");
+        
+        setTimeout(function() {
+            titleDesc.classList.add("active");
+            carouselExampleAutoplaying.classList.add("active");
+            carouselExampleControls.classList.add("active");
+            buttonsContainer.classList.add("active");
+
+        }, 100);
+    });
+</script>
+
 
 {% endblock %}
