--- a/templates/main/aboutUs.html.twig
+++ b/templates/main/aboutUs.html.twig
@@ -7,11 +7,11 @@
         <div class="container-fluid pt-5 pb-5">
             <div class="row content">
                 <div class="col-lg-12 subContent">
-                    <h1 class="fw-bolder pb-5 text-center fade-in-up" id="about_title">{{ posts.title }}</h1> 
+                    <h1 class="fw-bolder pb-5 text-center" id="about_title">{{ posts.title }}</h1> 
                     {% if posts.mediaUrl is not null %}
-                    <img class="img-fluid rounded-5 imgL fade-in-left" id="about_img" src="upload/images/{{ asset(posts.mediaUrl) }}">
+                    <img class="img-fluid rounded-5 imgL" id="about_img" src="upload/images/{{ asset(posts.mediaUrl) }}">
                     {% endif %}
-                    <p class="fade-in-right" id="about_p">{{ posts.content|striptags|replace({'&nbsp;': ''}) }}</p>
+                    <p class="" id="about_p">{{ posts.content|striptags|replace({'&nbsp;': ''}) }}</p>
                 </div>
             </div>
         </div>
@@ -33,17 +33,4 @@
 {% endfor %}
 </section>
 
-<script>
-    document.addEventListener("DOMContentLoaded", function() {
-        const about_title = document.getElementById("about_title");
-        const about_img = document.getElementById("about_img");
-        const about_p = document.getElementById("about_p");
-        
-        setTimeout(function() {
-            about_title.classList.add("active");
-            about_img.classList.add("active");
-            about_p.classList.add("active");
-        }, 100);
-    });
-</script>
 {% endblock %}
